# Tic-Tac-Toe-C

./: .gitignore  CMakeLists.txt  README.md  main.c  windows-instructions.txt
builds/: Tic_Tac_Toe_C_Linux
resources/: UITemplate.glade  UITemplate.glade~  compile_resources.sh  gresource.xml  resources.c  style.css
src/app/: app.c  app.h  appwin.c  appwin.h
src/connection/: connection.c  connection.h  fifo.h  lin_fifo.c  win_fifo.c
src/constants/: constants.c  constants.h
src/game/: game.c  game.h
src/game/utils/: game_gtk_utils.c  game_gtk_utils.h  game_utils.c  game_utils.h
src/how_to_play/: how_to_play.c  how_to_play.h
src/lobby/: lobby.c  lobby.h
src/menu/: menu.c  menu.h
src/modals/: modals.c  modals.h
